// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentRow shows a Comment when itemType is comment 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <View>
    <Memo(Connect(Comment))
      comment={
        Object {
          "post": Object {
            "id": 2,
          },
        }
      }
      displayPostTitle={true}
      onPress={[Function]}
    />
  </View>
</TouchableOpacity>
`;

exports[`ContentRow shows a PostCard when itemType is post 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <View>
    <PostCard
      post={
        Object {
          "id": 2,
        }
      }
      respondToEvent={[Function]}
      shouldShowGroups={true}
    />
  </View>
</TouchableOpacity>
`;

exports[`FeedTab matches the last snapshot 1`] = `
<TouchableOpacity
  onPress={[Function]}
>
  <Text>
    Posts
  </Text>
</TouchableOpacity>
`;

exports[`MemberProfile matches the last snapshot 1`] = `
<View>
  <FlatList
    ListFooterComponent={
      <View>
        <Loading />
      </View>
    }
    ListHeaderComponent={
      <View>
        <Text>
          header
        </Text>
        <View>
          <FeedTab
            chosen={false}
            onPress={[Function]}
            option="Posts"
          />
          <FeedTab
            chosen={true}
            onPress={[Function]}
            option="Comments"
          />
          <FeedTab
            chosen={false}
            onPress={[Function]}
            option="Upvotes"
          />
        </View>
      </View>
    }
    contentContainerStyle={
      Object {
        "backgroundColor": "white",
      }
    }
    data={
      Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
      ]
    }
    keyExtractor={[Function]}
    numColumns={1}
    onEndReached={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
  />
</View>
`;
